# 6502-emu

./: .dir-locals.el  .gitignore  CMakeLists.txt  README.md  build.sh  build_dev.sh  cpu.hpp  debugger.cpp  debugger.hpp  instruction.cpp  instruction.hpp  main.cpp  memory.hpp
inc/: cpu.hpp  debugger.hpp  instruction.hpp  memory.hpp
src/: cpu.cpp  debugger.cpp  instruction.cpp
src/apps/: basic.cpp
test/: CMakeLists.txt  howto.txt
test/asm/: 6502_decimal_test.a65  6502_functional_test.a65  functional_kowalski_path.a65
test/inc/: util.hpp
test/src/: cpu.cpp  util.cpp
